@@ -1,3 +1,10 @@
+2007-02-12  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-11-07 
+	* add state transition 'Stop' (from 'Enabled' to
+	'Configured') to EPStateMachine; requires clients to implement
+	additional function stopAction()!
+
 2006-11-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
         * tag V00-11-06
